# graphFeatureSelect

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.toml  pyproject.toml  topk_mask_tau.py  topk_sanitycheck.py  topk_sanitycheck_baseline.py
docs/: data.md  dev.md  experiments.md  model.md
gfs/: MPNN.py  MPNN_concrete.py  models.py  trainer.py  utils.py
gfs/configs/: antelope.yaml  antelope_cerebellum.yaml  antelope_hippocampal_formation.yaml  antelope_hypothalamus.yaml  antelope_olfactory_areas.yaml  antelope_top10.yaml  antelope_topk.yaml
gfs/data/: hemisphere.py  hemisphere_new.py  preprocess.py
graphFeatureSelect/: MPNN.py  MPNN_concrete.py  concrete_autoencoder.py  datamodule.py  dataset.py  dataset_old.py  datasets.py  main.sh  models.py  trainer.py  utils.py
notebooks/: 00_dataproc.py  01_plot_sections.py  02_create_dev_dataset.py  0904_gumbel_softmax_convergence.ipynb  0905_concrete_autoencoder.ipynb  0906_kl_divergence_selection.ipynb  0910_concrete_gnn.ipynb  0911_concrete_gnn_temperature.ipynb  0912_concrete_gnn_gene_edges.ipynb  1005_gat_skip_connection.ipynb  1010_pyg_lightning.ipynb  1025_gnn_xyz_simulation.ipynb  1114_make_classification_concrete.ipynb  1116_concrete_gnn.ipynb  240904_gumbel_softmax_convergence.ipynb  240906_kl_divergence_selection.ipynb  240910_concrete_gnn.ipynb  240911_concrete_gnn_temperature.ipynb  240912_concrete_gnn_gene_edges.ipynb  241003_edges_similarity.ipynb  241005_gat_skip_connection.ipynb  241010_pyg_lightning.ipynb  241025_gnn_xyz_simulation.ipynb  241025_xyz_predict_celltype.ipynb  241114_make_classification_concrete.ipynb  241116_concrete_gnn.ipynb  241116_make_classification_concrete_gnn.ipynb  241220_swap_augment.ipynb  241230_testing_dataloader.ipynb  250108_mpnn.ipynb  250213_lasso.ipynb  Categorical_VAE.ipynb  GAT3_1slice.pth  temp.py
refactor/: data.md  dataloader.md  design.md  model.md  todo.md
scripts/: MPNN.py  config.py  config.txt  datamodule.py  datasets.py  main.sh  main2.sh  main_l0.sh  main_loc.sh  main_newdata.sh  main_stg.sh  main_test.sh  main_topk.sh  main_topk_nsamples.sh  mainconfig.sh  torch_geometric.nn.conv.gatv2_conv_GATv2Conv_edge_updater_wi1hbq07.py  torch_geometric.nn.conv.gatv2_conv_GATv2Conv_propagate_fbx4u4fa.py
scripts_0505/: main.sh  main_hardtraining.sh  main_stg.sh
src/gfs/: utils.py
tests/: test_backbone.py  test_config.py  test_data_pipeline.py  test_end_to_end.py  test_feature_selection.py  test_imports.py  test_install.py  test_lit_module.py  test_model_assembly.py
(+74 files in other folders)
