[project]
name = "gfs"
version = "0.0.1"
description = "Selecting optimal gene sets with graph neural networks."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Donghyun Kim", email = "dkim907@gatech.edu"},
]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]

dev = [
    # Development tools
    "build",
    "pre-commit",
    "ruff",
    # Jupyter/Notebooks
    "ipywidgets",
    # Visualization
    "matplotlib",
    "seaborn",
    # CLI & Progress
    "tqdm",
    "rich",
    "timebudget",
]

mldep = [
    # Core ML/DL
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "torch-geometric>=2.3.0",
    "torchmetrics>=1.0.0",
    "torchvision>=0.15.0",
    # Configuration
    "hydra-core>=1.2.0",
    "omegaconf>=2.2.0",
    # Monitoring
    "tensorboard",
]

data = [
    # Data science
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    # Bioinformatics
    "anndata>=0.9.0",
    "scanpy>=1.9.0",
    # Interactive analysis
    "ipython",
    "jupyterlab",
]

[project.urls]
Repository = "https://github.com/donghyunkm/graphFeatureSelect/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gfs"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.ruff]
line-length = 120
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]


[tool.ruff.lint]

# See rules: https://beta.ruff.rs/docs/rules/
select = [
    "I",    # isort
    "N",    # pep8-naming
    "NPY",  # numpy
    "RUF",  # ruff-specific rules
]

ignore = [
    "N801",  # allow class names that ignore capwords convention
    "N802",  # allow function names that are not all lowercase
    "N803",  # argument name should be lowercase; fine for matrices
    "N806",  # variable name should be lowercase; fine for matrices
    "N816",  # allow capwords for function names
    "NPY002", # allow calls to np.random; could cause slightly different results
    "N812",
]

preview = true

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["gfs"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
